src/css/seed.less
/* ... */
.scroll-left{
  &.first {
    display: none;
  }
}


.interactive-header {
  width: 95%;
  margin: auto;
  padding: 10px 0;
  &.mobile {
    display: none;
    @media @mobile {
      display: block;
    }
  }
  &.desktop {
    @media @mobile {
      display: none;
    }
  }
}

.flex-container {
  background: white;
  .display-flex();
  height: 600px;
  @media @tablet {
    height: 600px;
  }
  width: 100%;
  margin: 0 auto;
  .inset-map {
    img {
      width: 95%;
    }
  }
  @media @mobile {
    display: none;
  }
}

.info {
  .flex(0 0 50%);
  // margin-top: 20px;
  font-size: 17px;
  padding-left: 20px;
  font-family: @block-graphics;

  .graphic-title {
    font-size: 22px;
    font-family: @block-graphics;
  }
  .graphic-text {
    font-size: 16px;
    font-family: @block-graphics;
    padding-bottom: 20px;
    padding-top: 15px;
    max-width: 400px;
    margin: auto;
  }
  @media @mobile {
    padding: 20px;
  }
}

.image {
  .flex(1);
  position: relative;
  max-width: 360px;
  margin: 0 auto;
  margin-top: 20px;
  // margin-right: 20px;
  // max-width: 300px;
  .background, .overlay {
    position: absolute;
    width: 100%;
    // padding-top: 45px;
    @media @mobile {
      height: 280px;
      display: none;
    }
  }
}

.inset-map {
  max-width: 400px;
  margin: 20px auto;
}

// .inset-map {
//   img {
//     width: 50%;
//     position: relative;
//     display: block;
//     margin: auto;
//     padding: 5px 0;
//     padding-bottom: 10px;
//   }
// }

.overlay {
  height: 0;
  padding-bottom: percentage(788.4 / 1277.5);

  svg {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
}

.st-group:hover, .st-group.selected {
  .st-circle {
    fill: darken(#DD492D, 20%);
  }
  .st-plus {
    fill: darken(#F6CDBA, 20%);
  }
  .st-overlay {
    opacity: 0.5;
  }
}

.st-circle {
  fill: #DD492D;
  cursor: pointer;
}
.st-plus {
  fill: #F6CDBA;
  cursor: pointer;
}
.st-overlay {
  fill: #000000;
  opacity: 0;
  cursor: pointer;
}

// part 2: resources -----------------------------------------------------------

.resource {
  font-weight: bolder;
  text-align: left;
  width: 85%;
  margin: auto;
  padding: 5px 20px;
  @media @mobile {
    width: 100%;
  }
  .fa-external-link {
    padding-right: 10px;
  }
}

.resource-link {
  font-style: italic;
  font-weight: 100;
  font-size: 18px;
  cursor: pointer;
}

.resource-text {
  width: 90%;
  margin: 30px auto;
}

.interactive-source, .interactive-credit {
  clear: left;
  padding-top: 10px;
  font-size: 12px;
  color: @dark-gray;
  font-style: italic;
  font-family: @block-graphics;
  @media @tablet {
    padding: 10px 20px;
  }
  @media @mobile {
    padding: 10px;
  }
  &.padded {
    padding-bottom: 40px;
  }
}


.scroll-image {
  margin-top: 20px;
  img {
    height: 1200px;
    @media @mobile {
      height: 900px;
      width: 100%;
    }
  }
  float: left;
  width: 50%;
  text-align: center;
  @media @mobile {
    width: 100%;
    position: relative;
    // position: fixed;
  }
}

.pier-info {
  margin-left: 50%;
  padding: 20px;
  font-family: @block-graphics;
  font-size: 15px;
  color: @light-gray;
  @media @tablet {
    font-size: 14px;
    padding-right: 0;
  }
  @media @mobile {
    display: none;
  }
}

.pier-info-mobile {
  // z-index: 10000;
  position: absolute;
  // position: fixed;
  // bottom: 10px;
  background-color: rgba(0,0,0,0.75);
  color: white;
  font-family: @block-graphics;
  padding: 20px;
  font-size: 14px;
  margin-right: 5%;
  display: none;
  @media @mobile {
    display: block;
  }
}

.embarcadero-map-interactive {
  width: 80%;
  margin: 40px auto;
  @media @tablet {
    width: 90%;
  }
}

// pt 3: timeline code -----------------------------------------------------------

.timeline-container {
  max-width: 800px;
  width: 80%;
  margin: auto;
  font-family: @block-graphics;

  @media @tablet {
    width: 90%;
    margin: auto;
  }
  @media @mobile {
    width: 100%;
    margin: 0;
  }
}

.timeline {
  width: 100%;
  margin: 0 auto;
  background: white;
  border-bottom: .5px solid rgba(0,0,0,0.2);
  border-top: .5px solid rgba(0,0,0,0.2);
}

#timeline-placeholder {
  display: none;
  height: 93px;
}

.event {
  border-top: .5px solid rgba(0,0,0,0.2);
  padding-top: 20px;
  padding-bottom: 30px;
  overflow: auto;
}

.date {
  width: 20%;
  float: left;
  text-align: center;
  font-weight: bold;
  font-size: 20px;

  @media @mobile {
  width: 90%;
  text-align: left;
  margin-left: 5%;
  }
}

.event-info {
  width: 80%;
  float: left;
  font-size: 14px;

  @media @mobile {
  width: 90%;
  margin-left: 5%;
  }
}

#year0, #year12 {
  fill: gray;
}

#year1, #year2, #year3, #year4, #year5, #year6, #year7, #year8, #year9, #year10, #year11 {
  display: none;
}

#year13, #year14, #year15, #year16, #year17, #year18, #year19, #year20, #year21, #year22, #year23, #year24, #year25 {
  display: none;
}

.tick:hover > #year13,
.tick:hover > #year14,
.tick:hover > #year15,
.tick:hover > #year16,
.tick:hover > #year17,
.tick:hover > #year18,
.tick:hover > #year19,
.tick:hover > #year20,
.tick:hover > #year21,
.tick:hover > #year22,
.tick:hover > #year23,
.tick:hover > #year24,
.tick:hover > #year25,
.tick:hover > #year26 {
  display: block;
  fill: gray;
}

.tick:hover circle {
  fill: gray;
}

.tick .active {
  display: block !important;
  fill: black;
}

.right-align {
  margin-right: 10px;
}

.tick text {
  font-size: 12px;
  font-family: @block-graphics;
}

#timeline.sticky {
  // width: 100%;
  // width: inherit;
  z-index: 100;
  position: fixed;
  top: 0;
  margin-top: 38px;
  text-align: left;
  @media @mobile {
    top: unset;
    bottom: 0;
    font-size: 14px;
    vertical-align: bottom;
  }
}

#timeline-bottom {
  height: 1px;
}

svg {
  margin: 0 auto;
  display: block;
}

path.domain {
  stroke-width: 2px;
  stroke: rgba(0,0,0,0.2);
}

